style.css
body {
    background-color: white
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.header-box {
    background-color: #2e3e51;
    border-bottom: 2px solid black;
    height: 100px;
    width: 100%;
    color: rgb(0, 0, 0);
    text-align: center;
    text-transform: uppercase;
    padding: 15px
}

h1 {
    color: rgb(3, 1, 1);

    font-size: 40px;
}

.card {
    border: 2px solid black;
    height: 125px;
    width: 250px;
    text-align: left;
    padding: 20px 10px 20px 25px;
    margin: 20px;
}

.footer {
    border-top: 2px solid black;
    height: 100px;
    width: 100%;
    color: rgb(0, 0, 0);
    padding: 20px;
}

